[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
shared = { path = "../shared" }
anyhow = "1.0"
env_logger = "0.11"
fastrand = "2.0"
chrono = { version = "0.4", features = ["serde"] }
